refactor: 크루알람, 게임 알람 리팩토링